@@ -68,12 +68,11 @@ oses.eachWithIndex { osMapping, indexOfOs ->
                         boolean first = indexOfOs == 0 && indexOfMaven == 0 && indexOfJdk == 0
                         def failsafeItPort = 8000 + 100 * indexOfMaven + 10 * indexOfJdk
                         def allOptions = options + ['-Djava.awt.headless=true', "-Dfailsafe-integration-test-port=${failsafeItPort}", "-Dfailsafe-integration-test-stop-port=${1 + failsafeItPort}"]
+                        if (jdk >= 9) {
+                            allOptions += ['-P', 'jdk9+']
+                        }
                         if (jdk == 7) {
                             allOptions += '-Dhttps.protocols=TLSv1.2'
-                        }
-                        if (jdk >= 9) {
-                            allOptions += '\"-Djvm9.args.tests=--add-opens java.base/java.lang=ALL-UNNAMED\"'
-                            allOptions += '\"-Djvm9.args.tests=--add-opens java.base/java.math=ALL-UNNAMED\"'
                         }
                         if (!maven.startsWith('3.2') && !maven.startsWith('3.3') && !maven.startsWith('3.5')) {
                             allOptions += '--no-transfer-progress'
